# cyborgs_MFC_bot

./: bot.py  pyproject.toml  states.py
DataBase/: config.py  models_db.py  utils.py
DataBase/migrations/: PlayerMigration.py
DataBase/models/: EventModel.py  MarkModel.py  PlayerModel.py
DataBase/repositories/: EventRepository.py  MarkRepository.py  PlayerRepository.py
callbacks/: mark_callback.py
handlers/: check_players.py  create_event.py  create_player.py  marking.py  menu.py  start.py
keyboards/: admin_panel.py  admins.py  answer.py  authorization.py  check_players_table.py  event_date.py  event_place.py  event_type.py  place.py
misc/: constValues.py  env.py  utils.py
