[tool.poetry]
name = "cyborgs-mfc-bot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
aiogram = "^3.1.1"
peewee = "^3.17.0"
pymysql = "^1.1.0"
cryptography = "^41.0.5"
apscheduler = "^3.10.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
